# manapool-skill

./: .gitignore  README.md  SKILL.md  pyproject.toml
references/: api_docs.md  openapi.json
scripts/: example_inventory.json  manapool_cli.py
src/manapool/: api.py  cli.py
src/manapool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
