[project]
name = "manapool"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "requests>=2.32.5",
]

[project.scripts]
manapool = "manapool.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
